--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -2,3 +2,35 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
+
+/* ******************************************* */
+/* NG Progress (loading indicator) styles */
+/* Make clicks pass-through */
+/* ******************************************* */
+#nprogress {
+  pointer-events: none;
+}
+
+#nprogress .bar {
+  background: #4299e1;
+  position: fixed;
+  z-index: 1031;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 2px;
+}
+
+/* Fancy blur effect */
+#nprogress .peg {
+  display: block;
+  position: absolute;
+  right: 0px;
+  width: 100px;
+  height: 100%;
+  box-shadow: 0 0 10px #4299e1, 0 0 5px #4299e1;
+  opacity: 1;
+  -webkit-transform: rotate(3deg) translate(0px, -4px);
+  -ms-transform: rotate(3deg) translate(0px, -4px);
+  transform: rotate(3deg) translate(0px, -4px);
+}
